# kip-parallel-OpenMP

./: CMakeLists.txt  README.md
AoS/: CMakeLists.txt  README.md
AoS/data/strong_scaling/#1/: kip_openMP_strongScaling_4K_7.csv  kip_openMP_strongScaling_7K_25.csv
AoS/data/weak_scaling/#1/: kip_openMP_weakScaling_6K_19.csv
AoS/src/expt/: main.cpp  strong_scaling.cpp
AoS/src/expt/workload/: Workload.cpp
AoS/tests/: CMakeLists.txt
AoS_basic/: CMakeLists.txt
AoS_basic/data/weak_scaling/#1/: kip_openMP_weakScaling_7K_7.csv
AoS_basic/src/expt/: profile.cpp  weak_scaling.cpp
SoA/: .gitignore  CMakeLists.txt  README.md
SoA/src/expt/: profile.cpp
SoA/src/expt/workload/: Workload.cpp
SoA/src/image/: Image.cpp  Image.h
SoA/src/processing/: ImageProcessing.cpp
SoA_basic/: CMakeLists.txt
SoA_basic/py_script/: .gitignore  gustafson.py
SoA_basic/src/expt/: main.cpp  strong_scaling.cpp  weak_scaling.cpp
SoA_basic/tests/: CMakeLists.txt  STBImageReaderTest.cpp
data/strong_scaling/#1/: kip_openMP_strongScaling_4K_25.csv  kip_openMP_strongScaling_5K_13.csv  kip_openMP_strongScaling_6K_19.csv  kip_openMP_strongScaling_7K_7.csv
data/weak_scaling/#1/: kip_openMP_weakScaling_4K_25.csv  kip_openMP_weakScaling_4K_7.csv  kip_openMP_weakScaling_5K_13.csv  kip_openMP_weakScaling_7K_25.csv
py_script/: amdahl.py  gustafson.py  plot_csv.py
src/expt/: main.cpp  profile.cpp  strong_scaling.cpp  weak_scaling.cpp
src/expt/workload/: Workload.h
src/processing/: ImageProcessing.cpp
tests/: CMakeLists.txt
